--- a/docs/blocks/machines/industrial_blast_furnace.mdx
+++ b/docs/blocks/machines/industrial_blast_furnace.mdx
@@ -18,9 +18,9 @@ The smelting abilities depend on the casings used for the multi-block.
 The **Blast Furnace** requires a 3×4 multi-block with a hole in the center.  
 The multi-block can be built from different machine casings. Possible options include:
 
-- <McItem slug="techreborn:standard_machine_casing" inline={true}/>
-- <McItem slug="techreborn:advanced_machine_casing" inline={true}/>
-- <McItem slug="techreborn:industrial_machine_casing" inline={true}/>
+- <McItem slug="techreborn:standard_machine_casing" />
+- <McItem slug="techreborn:advanced_machine_casing" />
+- <McItem slug="techreborn:industrial_machine_casing" />
 
 This configuration will generate heat inside the furnace, enabling it to smelt the toughest ores (the type of casing used determines the heat generated).
 
@@ -35,12 +35,16 @@ This configuration will generate heat inside the furnace, enabling it to smelt t
 
 Place the **Blast Furnace** in the center of the bottom layer and connect it to a power source.
 
-- A multi-block built using <McItem slug="techreborn:standard_machine_casing" inline={true}/> will generate **1360 heat**  
+- A multi-block built using <McItem slug="techreborn:standard_machine_casing" /> will generate **1360 heat**  
   <img src="/img/blocks/blast_furnace1.png" alt="Standard Casing Furnace"/>
-- A multi-block built using <McItem slug="techreborn:industrial_machine_casing" inline={true}/> will generate **3230 heat**  
+- A multi-block built using <McItem slug="techreborn:industrial_machine_casing" /> will generate **3230 heat**  
   <img src="/img/blocks/blast_furnace2.png" alt="Industrial Casing Furnace"/>
 
-> 🪨 Two blocks of lava placed in the center of the multi-block will add **500 heat**.
+::: tip
+
+Two blocks of lava placed in the center of the multi-block will add **500 heat**.
+
+:::
 
 ## Video
 
