--- a/docs/blocks/machines/industrial_blast_furnace.mdx
+++ b/docs/blocks/machines/industrial_blast_furnace.mdx
@@ -4,18 +4,18 @@ title: Industrial Blast Furnace
 
 <ItemImage file="industrial_blast_furnace" alt="Industrial Blast Furnace" size="200" />
 
-# Blast Furnace
+# Industrial Blast Furnace
 
-The **Blast Furnace** is a multi-block machine used to smelt tough metals. It has an input rate of 512 FE/tick and an internal buffer of 40,000 FE.  
+The **Industrial Blast Furnace** is a multi-block machine used to smelt tough metals. It has an input rate of 512 FE/tick and an internal buffer of 40,000 FE.  
 The smelting abilities depend on the casings used for the multi-block.
 
 ## Recipe
 
-<CraftingTable recipe="input techreborn:advanced_circuit techreborn:cupronickel_heating_coil techreborn:advanced_circuit input techreborn:cupronickel_heating_coil techreborn:advanced_machine_block techreborn:cupronickel_heating_coil input techreborn:electric_furnace techreborn:cupronickel_heating_coil techreborn:electric_furnace output techreborn:blast_furnace"/>
+<CraftingTable recipe="input techreborn:advanced_circuit techreborn:cupronickel_heating_coil techreborn:advanced_circuit input techreborn:cupronickel_heating_coil techreborn:advanced_machine_block techreborn:cupronickel_heating_coil input techreborn:electric_furnace techreborn:cupronickel_heating_coil techreborn:electric_furnace output techreborn:industrial_blast_furnace"/>
 
 ## Building Instructions
 
-The **Blast Furnace** requires a 3×4 multi-block with a hole in the center.  
+The **Industrial Blast Furnace** requires a 3×4 multi-block with a hole in the center.  
 The multi-block can be built from different machine casings. Possible options include:
 
 - <McItem slug="techreborn:standard_machine_casing" />
@@ -33,7 +33,7 @@ This configuration will generate heat inside the furnace, enabling it to smelt t
 - **Fourth layer**: 9x casings  
   <img src="/img/blocks/blast_furnace_layer4.png" alt="Blast Furnace Layer 4"/>
 
-Place the **Blast Furnace** in the center of the bottom layer and connect it to a power source.
+Place the **Industrial Blast Furnace** in the center of the bottom layer and connect it to a power source.
 
 - A multi-block built using <McItem slug="techreborn:standard_machine_casing" /> will generate **1360 heat**  
   <img src="/img/blocks/blast_furnace1.png" alt="Standard Casing Furnace"/>
